--- a/views/contact-us.html
+++ b/views/contact-us.html
@@ -19,7 +19,7 @@
     <main>
         <form action="/contact-us" method="POST" class="form">
             <label>Name:<input type="text" name="name" class="name"></label><br>
-            <label>Phone no:<input type="text" name="phone-no" class="phone"></label><br>
+            <label>Phone no:<input type="text" name="phoneno" class="phone"></label><br>
             <label>Email Id:<input type="text" name="email" class="email"></label><br>
             <button type="submit" class="register_btn">
                 Register
