--- a/views/product.html
+++ b/views/product.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add product</title>
-    <link rel="stylesheet" href="css/main.css" type="text/css">
+    <link rel="stylesheet" href="/css/main.css" type="text/css">
 </head>
 <body>
     <header class="main_header">
@@ -18,7 +18,7 @@
     </header>
     <main>
         <form action="/admin/add-product" method="POST" class="form">
-            <input type="text" name="add-product" class="add-product">
+            <input type="text" name="addproduct" class="add-product">
             <button type="submit" class="add_product_btn">Add Product</button>
         </form>
     </main>
