--- a/views/shop.Html
+++ b/views/shop.Html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <h1>Hey buddy</h1>
+        <h1>{{product}}</h1>
     </main>
 </body>
 </html>
